[package]
name = "vCenter-CLI"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tui = "0.19.0"
crossterm = "0.26.1"
arboard = "3.2.0"
serde = {version = "1.0.160", features = ["derive"]}
serde_json = "1.0.96"
serde_yaml = "0.9.21"
base64 = "0.21.0"
reqwest = {version = "0.11.16",features = ["blocking"] }
xml-rs = "0.8.4"
dotenv = "0.15.0"



